kubernetes/apps/default/obico/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: obico
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Obico
    gethomepage.dev/description: 3D print monitoring
    gethomepage.dev/group: Utilities
    gethomepage.dev/icon: obico.png
spec:
  hostnames:
    - obico.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: obico-server
          port: 3334
